# myProject

./: .clang-format  .gitignore  CMakeLists.txt  README.md  learn_pinocchio.py  main  main.cpp  main1.cpp  pinocchio_test.cpp  quick_stop.cpp  quick_stop.h  quick_stop.py  robot_pinocchio_test.cpp  worldtest  zqsa01p.urdf
PersonalLibrary/: constant.h  transformationMath.cpp  transformationMath.h
Simulation/pybullet/: robotSIm.py
Simulation/pybullet_simulation/ros_pybullet_msg/: CMakeLists.txt
SimulationModule/pybullet/: main_function.py  robotSIm.py
cmake/: AddGoogleTest.cmake  GetAliasNamespace.cmake  GetNamespace.cmake
controller/: CMakeLists.txt
controller/MPC_controller/: CMakeLists.txt
controller/ThirdPartyLibrary/: CMakeLists.txt
controller/ThirdPartyLibrary/detail_simulation/: CMakeLists.txt
controller/ThirdPartyLibrary/detail_simulation/linearDynamics/getRegressionMatrix/: getRegressionMatrix_initialize.h  getRegressionMatrix_rtw.mk  getRegressionMatrix_terminate.h  getYmatrix_leg1.cpp  getYmatrix_leg3.h
controller/ThirdPartyLibrary/detail_simulation/linearDynamics/getRegressionMatrix/examples/: main.h
controller/ThirdPartyLibrary/detail_simulation/linearDynamics/getRegressionMatrix/interface/: _coder_getRegressionMatrix_api.h
controller/common_data/: common_data.h
controller/gait/: CMakeLists.txt  gait..h  gait.cpp  gait.h  time_gait_generator.cpp  time_gait_generator.h
controller/mpc_controller/: CMakeLists.txt  convexMPC.cpp  convexMPC.h  locomotion_mpc_controller.cpp  locomotion_mpc_controller.h  math_utils.cpp  math_utils.h  mpc_interface.cpp  mpc_interface.h  solver_mpc.cpp  solver_mpc.h  stance_leg_mpc_controller.cpp  stance_leg_mpc_controller.h  swing_leg_planner.cpp  swing_leg_planner.h
controller/personallibrary/: CMakeLists.txt  dynamics.h  transformationMath.cpp  transformationMath.h
controller/src/: mainController.cpp  subscriber.cpp
controller/yMPCcontroller/: CMakeLists.txt
legged_wbc/: CMakeLists.txt
legged_wbc/src/: WbcBase.cpp  WeightedWbc.cpp
model/: CMakeLists.txt  RobotBase.h  RobotSA01a.cpp  RobotSA01a.h  SA01p.urdf  orientation_math.h
model/a1_description/urdf/: a1.urdf  a1_2.urdf  a1_modified.urdf
model/laikago/meshes/: hip.obj.backup  thigh.obj.backup  thigh_mirror.obj.backup  trunk.dae
model/laikago/urdf/: laikago_flip.urdf  laikago_mirror.urdf  laikago_obj.urdf  laikago_obj_double_inertia.urdf  laikago_obj_no_inertia.urdf  laikago_simple.urdf
model/px2_et1/: px2_et1.urdf  px2_et1_detailed.urdf
model/px2_et1/meshes/: fr1_l.stl  fr3_l.stl  fr_foot.stl  hl1_l.stl  hl2_l.stl  hr2_l.stl  hr3_l.stl  hr_foot.stl
modelDynamics/: CMakeLists.txt  PseudoInverse.h  RobotBase.cpp  RobotBase.h  RobotSA01a.h  test_kinematics.cpp
pinocchio_interface/: CMakeLists.txt  PinocchioInterface.cpp  PinocchioInterface.h  pinocchio_interface.cpp  pinocchio_interface.h
pinocchio_interface/include/pinocchio_interface/: basic_structure.h  pinocchio_centroidal_dynamics.h  pinocchio_full_dynamics.h  pinocchio_kinematics.h
pinocchio_interface/src/test/: test_pinochio_full_dynamics.cpp  test_pinochio_interface.cpp  test_pinochio_kinematics.cpp
px3_mesh/config/: robot_control.yaml
px3_mesh/launch/: check_joint.rviz  laikago_rviz.launch
px3_mesh/meshes/: base.STL  fl_1.STL  fl_2.STL  fl_3.STL  fl_4.STL  fl_5.STL  fl_6.STL  fr_1.STL  fr_3.STL  fr_4.STL  fr_6.STL  hl_a.STL  hl_fw.STL  hl_h.STL  hl_h_rotated.STL  hl_k.STL  hl_kw.STL  hr_h.STL  hr_k.STL
px3_mesh/urdf/: px3.urdf
px3_mesh/xacro/: const.xacro  gazebo.xacro  leg_front.xacro  leg_hind.xacro  materials.xacro  robot.xacro  transmission.xacro  xacro2urdf.sh
ros_island/: CMakeLists.txt  main.cpp  ros_interface.cpp  ros_interface.h
ros_island/control_msgs/: CMakeLists.txt  package.xml
ros_island/control_msgs/msg/motion_control/: foot_cmd.msg  foot_state.msg  imu_data.msg  joint_cmd.msg  joint_state.msg  trunk_cmd.msg  trunk_state.msg
simulation/: LcmInterface.h  MujocoCommand.hpp  MujocoState.hpp
simulation/pybullet/: robotSIm.py  rosInterface.py
src/: CMakeLists.txt  main  main.cpp
src/PersonalLibrary/: dynamics.h  transformationMath.h
src/estimator/: CMakeLists.txt
src/estimator/linearKF_state_estimator/: CMakeLists.txt
src/estimator/linearKF_state_estimator/include/linearKF_state_estimator/: linearKF_setting.h  linearKF_state_estimator.h
src/estimator/linearKF_state_estimator/src/: linearKF_state_estimator.cpp
src/estimator/linearKF_state_estimator/src/test/: test_linearKF_state_estimator.cpp
src/estimator/parallel_ankle/: CMakeLists.txt
src/estimator/parallel_ankle/include/parallel_ankle/: fk_net.h  parallel_ankle.h
src/estimator/parallel_ankle/src/: fk_net.cpp  parallel_ankle.cpp
src/math/include/math/: constants.h  fast_pose_composition_functions.h  fast_pose_composition_functions_avx2_fma.h  interpolation.h  roll_pitch_yaw.h  rotation_matrix.h
src/math/src/: fast_pose_composition_functions.cpp  fast_pose_composition_functions_avx2_fma.cpp  roll_pitch_yaw.cpp  rotation_matrix.cpp
src/pinocchio_interface/: CMakeLists.txt
src/pinocchio_interface/include/pinocchio_interface/: basic_structure.h  pinocchio_centroidal_dynamics.h  pinocchio_centroidal_model.h  pinocchio_dynamics.h  pinocchio_full_dynamics.h  pinocchio_full_model.h  pinocchio_interface.h  pinocchio_kinematics.h  pinocchio_srbd_model.h  pseudo_inverse.h_
src/pinocchio_interface/src/: pinocchio_centroidal_dynamics.cpp  pinocchio_dynamics.cpp  pinocchio_full_dynamics.cpp  pinocchio_interface.cpp  pinocchio_kinematics.cpp
src/pinocchio_interface/src/test/: SA01p.urdf  test_pinochio_full_dynamics.cpp  test_pinochio_interface.cpp  test_pinochio_kinematics.cpp
src/pybullet_simulation/: CMakeLists.txt  package.xml
src/pybullet_simulation/pybullet/: robotSIm.py
src/quadruped_controller/: CMakeLists.txt  package.xml
src/quadruped_controller/src/: mainController.cpp  subscriber.cpp
src/ros_pybullet/: CMakeLists.txt
src/ros_pybullet_msg/: CMakeLists.txt  package.xml
src/ros_pybullet_msg/msg/: pybullet.msg
src/tutorial/: CMakeLists.txt  package.xml
(+80 files in other folders)
